change file organisation and fix error with logo on mobile closes #1

--- a/drupal/sites/all/themes/epicgamejam/assets/sass/organisms/_header.scss
+++ b/drupal/sites/all/themes/epicgamejam/assets/sass/organisms/_header.scss
@@ -3,7 +3,4 @@ header.header {
     position: relative;
     z-index: 10;
   }
-  .logo {
-    max-width: 450px;
-  }
 }
